--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
  <title>Hello Coursera!</title>title>
  <head>
  <body>
- <hi>Hello Coursera!</hi>hi>
+ <hi>Hello Coursera! Its awesome</hi>
  </body>
  </!DOCTYPE html>
  </body>
