--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>Hello Coursera!</title>title>
+ <title>Sahil</title>
  <head>
- <body>
- <hi>Hello Coursera! Its awesome</hi>
- </body>
- </!DOCTYPE html>
- </body>
- </html>
+<body>
+ <header>
+  sa9tech
+ </header>
+ <h1>sa9tech Intro</h1>
+ <p>It is a company started by Sahil</p>
+ <h2>Aim</h2>
+ <p>His aim is to make profit by making applications and nothing more than that</p>
+ <aside>
+ His bio-data
+ </aside>
+ <footer>sa9tech copyright</footer>
+</body>
+</html>
